<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    android:orientation="vertical"
    android:background="@drawable/contact_click_bg">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/add_friend"
        android:gravity="center"
        android:textSize="20dp"
        android:textColor="#000000"
        android:background="@drawable/title_bar"/>
    
    <EditText
        android:id="@+id/et_search_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_friend"
        android:layout_marginTop="60dp"
        android:inputType="phone"/>
    
    <Button
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7CB8E2"
        android:text="@string/search"
        android:onClick="searchFriend"/>


</LinearLayout>
