<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <!-- 主界面中的第2个页卡 -->
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:background="@drawable/contact_click_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/new_friend" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/new_friends"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:textSize="13dp"
                    android:textColor="#000000" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/mostfocus"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/most_focus"
                    android:gravity="center_horizontal"
                    android:textSize="13dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#000000" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/list_group" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/groups"
                    android:gravity="center_horizontal"
                    android:textSize="13dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#000000" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.25"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:src="@drawable/trend" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/public_list"
                    android:gravity="center_horizontal"
                    android:textSize="13dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#000000" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:background="#B6E3F8"
            android:text="@string/tv_my_friends" />

        <ListView
            android:id="@+id/lv_home2_show_friends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="100" >
        </ListView>
    </LinearLayout>
</LinearLayout>
