<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/contact_click_bg"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <FrameLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="140dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:src="@drawable/f007" />
    </FrameLayout>

    <LinearLayout
        android:layout_below="@id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100" >

         <!-- 账户-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_userAccount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/user_info"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_user_account_phone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="test"
                android:textSize="18dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#88C6F2" />
     
        <!-- 昵称 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/user_nickname"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_user_nickname"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="testasdfasdf"
                android:textSize="18dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#88C6F2" />
        
<!-- 签名 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/user_sign"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tv_user_sign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.7"
                android:gravity="center_vertical"
                android:text="testasdfasdf"
                android:textSize="18dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#88C6F2" />
    </LinearLayout>

    <Button
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_friend_now" 
        android:layout_alignParentBottom="true"
        android:background="#EE404E"
        android:onClick="addFriend"/>

</RelativeLayout>